devices/MRE_Controller_Data_Package/WIN64/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
#define R_OK   0
#define RUN_OFF   0
#define RUN_ON   1
#define DIR_NEG   0
#define DIR_POS   1
#define LIMIT_ON   1
#define LIMIT_OFF   0
#define RESOURCE_MOTOR   0x00000001
#define RESOURCE_TTL_IN   0x00000002
#define RESOURCE_TTL_OUT   0x00000004
#define RESOURCE_OPTIC_IN   0x00000008
#define RESOURCE_OPTIC_OUT   0x00000010
#define RESOURCE_AD   0x00000020
#define RESOURCE_OC   0x00000040
#define RESOURCE_LINE   0x00000080
#define RESOURCE_CIRCLE   0x00000100
#define RESOURCE_PLC   0x00000200
#define RESOURCE_STREAM   0x00000400
#define RESOURCE_ENCODER   0x00000800
#define RESOURCE_PWM   0x00001000
#define RESOURCE_T   0x00002000
#define RESOURCE_TRIGGER   0x00004000
MT_API int32_t __stdcall MT_Set_Encoder_Pos(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Pos(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Encoder_Z_Polarity(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Z_Polarity(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Encoder_Dir_Polarity(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Dir_Polarity(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_Encoder_Index_Line_Count(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Encoder_Index_Line_Count(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_Encoder_Over_Enable(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Over_Enable(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Encoder_Over_Max(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Over_Max(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Encoder_Over_Stable(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Encoder_Over_Stable(int32_t ADev,uint16_t AObj,int32_t Value);
//高速主动数据上传
MT_API int32_t __stdcall MT_Get_Push_Data(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Push_Data(int32_t ADev,uint16_t AObj,int32_t* pValue);
//2021 04 24  同步触发相关接口
MT_API int32_t __stdcall MT_Set_Trigger_Enable(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Trigger_Enable(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Trigger_Start(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Trigger_Start(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Trigger_End(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Trigger_End(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Trigger_Step(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Trigger_Step(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Trigger_Width(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Trigger_Width(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Trigger_Channel(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Trigger_Channel(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Trigger_Polarity(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Trigger_Polarity(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_Trigger_Enable(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Trigger_Enable(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Trigger_Start(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Trigger_Start(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Trigger_End(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Trigger_End(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Trigger_Step(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Trigger_Step(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Trigger_Width(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Trigger_Width(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Trigger_Channel(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Trigger_Channel(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Trigger_Polarity(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Trigger_Polarity(int32_t ADev,uint16_t AObj,int32_t* pValue);
//辅助计算公式
//mm to pluse
MT_API int32_t __stdcall MT_Help_Step_Line_Real_To_Steps(double AStepAngle,int32_t ADiv,double APitch,double ALineRatio,double AValue);
MT_API int32_t __stdcall MT_Help_Step_Circle_Real_To_Steps(double AStepAngle,int32_t ADiv,double ACircleRatio,double AValue);
//pluse to mm
MT_API double __stdcall MT_Help_Step_Line_Steps_To_Real(double AStepAngle,int32_t ADiv,double APitch,double ALineRatio,int32_t AValue);
MT_API double __stdcall MT_Help_Step_Circle_Steps_To_Real(double AStepAngle,int32_t ADiv,double ACircleRatio,int32_t AValue);
//Encoder
//物理量到单位脉冲
MT_API int32_t __stdcall MT_Help_Encoder_Line_Real_To_Steps(double APitch,double ALineRatio,int32_t ALineCount,double AValue);
MT_API int32_t __stdcall MT_Help_Encoder_Circle_Real_To_Steps(double ACircleRatio,int32_t ALineCount,double AValue);
//pluse to mm
MT_API double __stdcall MT_Help_Encoder_Line_Steps_To_Real(double APitch,double ALineRatio,int32_t ALineCount,int32_t AValue);
MT_API double __stdcall MT_Help_Encoder_Circle_Steps_To_Real(double ACircleRatio,int32_t ALineCount,int32_t AValue);
//Grating
//物理量到单位脉冲
MT_API int32_t __stdcall MT_Help_Grating_Line_Real_To_Steps(double AUnit_um,double AValue);
MT_API int32_t __stdcall MT_Help_Grating_Circle_Real_To_Steps(int32_t ALineCount,double AValue);
//pluse to mm
MT_API double __stdcall MT_Help_Grating_Line_Steps_To_Real(double AUnit_um,int32_t AValue);
MT_API double __stdcall MT_Help_Grating_Circle_Steps_To_Real(int32_t ALineCount,int32_t AValue);
MT_API float __stdcall MT_Help_Encoder_Factor(double AStepAngle,int32_t ADiv,int32_t ALineCount);
//光栅尺安装在机械上，电机旋转并不一致，需要考虑机械的影响
MT_API float __stdcall MT_Help_Grating_Line_Factor(double AStepAngle,int32_t ADiv,double APitch,double ALineRatio,double AUnit_um);
MT_API float __stdcall MT_Help_Grating_Circle_Factor(double AStepAngle,int32_t ADiv,double ACircleRatio,int32_t ALineCount);