devices/MRE_Controller_Data_Package/WIN64/MT_API.pas


function MT_Set_Encoder_Pos(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Encoder_Pos(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Encoder_Z_Polarity(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Encoder_Z_Polarity(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'


function MT_Set_Encoder_Dir_Polarity(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Encoder_Dir_Polarity(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'


function MT_Get_Encoder_Index_Line_Count(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Encoder_Index_Line_Count(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Encoder_Over_Enable(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Encoder_Over_Enable(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Encoder_Over_Max(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Encoder_Over_Max(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'


function MT_Set_Encoder_Over_Stable(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Encoder_Over_Stable(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

//高速主动数据上传
function MT_Get_Push_Data(AObj: Word; pValue: PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Push_Data(ADev:Integer;AObj:Word;pValue: PInteger):Integer;stdcall;external 'MT_API.dll'


//2021 04 24  同步触发相关接口
function MT_Set_Trigger_Enable(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Trigger_Enable(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Trigger_Start(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Trigger_Start(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Trigger_End(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Trigger_End(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Trigger_Step(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Trigger_Step(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Trigger_Width(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Trigger_Width(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Trigger_Channel(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Trigger_Channel(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Trigger_Polarity(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Trigger_Polarity(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Trigger_Enable(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Trigger_Enable(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Trigger_Start(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Trigger_Start(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Trigger_End(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Trigger_End(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Trigger_Step(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Trigger_Step(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Trigger_Width(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Trigger_Width(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Trigger_Channel(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Trigger_Channel(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Trigger_Polarity(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Trigger_Polarity(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//辅助计算公式
//mm to pluse
function MT_Help_Step_Line_Real_To_Steps(AStepAngle:Double;ADiv:Integer;APitch:Double;ALineRatio:Double;AValue:Double):Integer;stdcall;external 'MT_API.dll'
function MT_Help_Step_Circle_Real_To_Steps(AStepAngle:Double;ADiv:Integer;ACircleRatio:Double;AValue:Double):Integer;stdcall;external 'MT_API.dll'

//pluse to mm
function MT_Help_Step_Line_Steps_To_Real(AStepAngle:Double;ADiv:Integer;APitch:Double;ALineRatio:Double;AValue:Integer):Double;stdcall;external 'MT_API.dll'
function MT_Help_Step_Circle_Steps_To_Real(AStepAngle:Double;ADiv:Integer;ACircleRatio:Double;AValue:Integer):Double;stdcall;external 'MT_API.dll'

//Encoder
//物理量到单位脉冲
function MT_Help_Encoder_Line_Real_To_Steps(APitch:Double;ALineRatio:Double;ALineCount:Integer;AValue:Double):Integer;stdcall;external 'MT_API.dll'
function MT_Help_Encoder_Circle_Real_To_Steps(ACircleRatio:Double;ALineCount:Integer;AValue:Double):Integer;stdcall;external 'MT_API.dll'

//pluse to mm
function MT_Help_Encoder_Line_Steps_To_Real(APitch:Double;ALineRatio:Double;ALineCount:Integer;AValue:Integer):Double;stdcall;external 'MT_API.dll'
function MT_Help_Encoder_Circle_Steps_To_Real(ACircleRatio:Double;ALineCount:Integer;AValue:Integer):Double;stdcall;external 'MT_API.dll'
//Grating
//物理量到单位脉冲
function MT_Help_Grating_Line_Real_To_Steps(AUnit_um:Double;AValue:Double):Integer;stdcall;external 'MT_API.dll'
function MT_Help_Grating_Circle_Real_To_Steps(ALineCount:Integer;AValue:Double):Integer;stdcall;external 'MT_API.dll'

//pluse to mm
function MT_Help_Grating_Line_Steps_To_Real(AUnit_um:Double;AValue:Integer):Double;stdcall;external 'MT_API.dll'
function MT_Help_Grating_Circle_Steps_To_Real(ALineCount:Integer;AValue:Integer):Double;stdcall;external 'MT_API.dll'

function MT_Help_Encoder_Factor(AStepAngle:Double;ADiv:Integer;ALineCount:Integer):Single;stdcall;external 'MT_API.dll'

//光栅尺安装在机械上，电机旋转并不一致，需要考虑机械的影响
function MT_Help_Grating_Line_Factor(AStepAngle:Double;ADiv:Integer;APitch:Double;ALineRatio:Double;AUnit_um:Double):Single;stdcall;external 'MT_API.dll'

function MT_Help_Grating_Circle_Factor(AStepAngle:Double;ADiv:Integer;ACircleRatio:Double;ALineCount:Integer):Single;stdcall;external 'MT_API.dll'

const R_OK =0;
const RUN_OFF=0;
const RUN_ON=1;
const DIR_NEG=0;
const DIR_POS=1;
const LIMIT_ON=1;
const LIMIT_OFF=0;

//定义内部资源类型

const RESOURCE_MOTOR        =$00000001;
const RESOURCE_TTL_IN       =$00000002;
const RESOURCE_TTL_OUT      =$00000004;
const RESOURCE_OPTIC_IN     =$00000008;
const RESOURCE_OPTIC_OUT    =$00000010;
const RESOURCE_AD           =$00000020;
const RESOURCE_OC           =$00000040;
const RESOURCE_LINE         =$00000080;
const RESOURCE_CIRCLE       =$00000100;
const RESOURCE_PLC          =$00000200;
const RESOURCE_STREAM       =$00000400;
const RESOURCE_ENCODER      =$00000800;
const RESOURCE_PWM          =$00001000;
const RESOURCE_T            =$00002000;
const RESOURCE_TRIGGER      =$00004000;
implementation

end.
